fixed pop up container and form w. scroll + z-index

--- a/app.css
+++ b/app.css
@@ -10,7 +10,10 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
+  position: relative;
+
 }
+
 
 a {
   text-decoration: none;
@@ -174,6 +177,7 @@ header {
   width: 100%;
   padding: 30px;
   box-sizing: border-box;
+  z-index: 1000;
 }
 
 #popup-container.visible {
@@ -192,6 +196,7 @@ form {
   max-width: 360px;
   box-sizing: border-box;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+
 }
 
 fieldset {
@@ -263,7 +268,7 @@ input[type="radio"]:checked {
   justify-content: center;
   height: 300px;
   background: #EDE9E3;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .contact-content {
@@ -297,11 +302,17 @@ input[type="radio"]:checked {
   }
 
   #popup-container {
-    top: 10px;
-    transform: translateX(-50%);
+    top: 50%;
+    transform: translateX(-50%, -50%);
     max-height: 85vh;
     overflow-y: auto;
-    /* Scrolling*/
+    z-index: 1000;
+  }
+
+  form {
+    max-height: 80vh;
+    overflow-y: auto;
+    margin: 0 auto;
   }
 
   .contact-section {
@@ -311,6 +322,7 @@ input[type="radio"]:checked {
   .contact-content {
     padding: 15px;
   }
+
 }
 
 /* Tablet exceptions*/
